--- a/SchetsEditor/SchetsEditor.csproj
+++ b/SchetsEditor/SchetsEditor.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bouwsteen.cs" />
     <Compile Include="Hoofdscherm.cs">
       <SubType>Form</SubType>
     </Compile>
